Remove incompatibility with Java 11 for profiling
Signed-off-by: Daniel Lacasse <daniel@nokee.dev>